# odom_extrinsic_calibrate

./: CMakeLists.txt  README.md
calibrate_dataset/: calib_log_yaml.yaml  result_odom_calib.txt
calibrate_dataset/evt_2_1/: calib_log_yaml.yaml  result_odom_calib.txt  trans_error_result.txt
calibrate_dataset/evt_2_1_batch2/: calib_log_yaml.yaml  trans_error_result.txt
calibrate_dataset/evt_3_2/: calib_log_yaml.yaml  result_odom_calib.txt  trans_error_result.txt
calibrate_dataset/evt_3_2_robot/: calib_log_yaml.yaml  result_odom_calib.txt  trans_error_result.txt
calibrate_dataset/evt_3_3/: calib_log_yaml.yaml  result_odom_calib.txt  trans_error_result.txt
calibrate_dataset/evt_3_3_batch2/: calib_log_yaml.yaml  result_odom_calib.txt  trans_error_result.txt
calibrate_dataset/evt_3_3_batch3/: calib_log.txt  result_odom_calib.txt
include/odom_extrinsic_calibrate/: NumbDifferentiator.hpp  OdomCalibrateError.h  OdomExtrinsicCalibrateError.h  OdomSensorExtrinsicError.h  Time.hpp  Time_imp.hpp  buffer-inl.h  buffer.h  calibrate_process.h  file-system-tools.h  local_parameterization_se2.hpp  odom_calibrate_solver.h  odom_integrator.h  sophus_ceres_cast.h  types.h  utils.h
sample/: calibrate_encoder.cpp
scripts/: check_encoder_raw_readings.m  dead_reckon.m  dead_reckon_full_path.m  plot_calib_result_one_robot.m  plot_calib_result_one_robot.m~  plot_simulate.m  plot_vio_and_integrate.m  plot_vio_and_integrate.m~  show_raw_encoder.m  show_raw_encoder.m~
src/: Duration.cpp  OdomCalibrateError.cpp  OdomExtrinsicCalibrateError.cpp  OdomSensorExtrinsicError.cpp  Time.cpp  calibrate_process.cpp  file-system-tools.cc  odom_calibrate_solver.cpp  utils.cpp
test/: testOdomCalibrateError2.cpp  testOdomCalibrateExtrinsicSimulation.cpp  testOdomCalibrateSimulation.cpp  testOdomExtrinsicCalibrateError.cpp  testOdomSensorExtrinsic.cpp  testOdomSensorExtrinsicSimulation.cpp  testTransform2DError.cpp  test_jacobian2.cpp
(+182 files in other folders)
